--- a/css/main.css
+++ b/css/main.css
@@ -78,8 +78,9 @@ i:hover {
 }
 
 .container {
-  margin: auto;
+  margin: 0 auto;
   width: 90%;
+  border: 1px solid red;
 }
 
 .flex-wrapper,
@@ -289,7 +290,7 @@ nav ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 20px;
+  gap: 50px;
 }
 .about__left, .about__right {
   -webkit-box-orient: vertical;
@@ -327,7 +328,11 @@ nav ul {
       -ms-flex: 2;
           flex: 2;
 }
+.about__right-text .wrap h2 {
+  font-size: clamp(24px, 4vw + 1rem, 35px);
+}
 .about__right-text .typewrite {
+  display: inline-block;
   font-size: 20px;
   font-weight: 700;
   color: #1abc9c;
@@ -350,7 +355,6 @@ nav ul {
       -ms-flex-align: center;
           align-items: center;
   padding: 40px 0 30px;
-  border: 2px solid;
   -webkit-mask-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(20%, rgb(0, 0, 0)), color-stop(80%, rgb(0, 0, 0)), to(rgba(0, 0, 0, 0)));
   -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(0, 0, 0) 20%, rgb(0, 0, 0) 80%, rgba(0, 0, 0, 0));
           mask-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(20%, rgb(0, 0, 0)), color-stop(80%, rgb(0, 0, 0)), to(rgba(0, 0, 0, 0)));
