--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,12 @@ html {
   padding: 50px 0 30px;
 }
 
+.header,
+.hero,
+.project {
+  background-color: #1C2833;
+}
+
 .about {
   background-color: #ECF0F1;
 }
@@ -75,6 +81,28 @@ i:hover {
   transition: 0.3s ease-in-out;
   color: #1abc9c;
   cursor: pointer;
+}
+
+.go-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 8px;
+  width: 40px;
+  height: 45px;
+  background-color: #1abc9c;
+  color: #1C2833;
+  border-radius: 50%;
+  opacity: 0.8;
+  display: none;
+  text-align: center;
+  font-size: 24px;
+}
+.go-to-top:hover {
+  color: #1abc9c;
+  outline: 2px solid #1abc9c;
+  background-color: #1C2833;
+  opacity: 1;
 }
 
 .container {
@@ -116,7 +144,6 @@ nav ul {
   width: 100%;
   height: 70px;
   place-content: end;
-  background-color: #1C2833;
   z-index: 200;
   -webkit-transition: -webkit-backdrop-filter 0.3s ease;
   transition: -webkit-backdrop-filter 0.3s ease;
@@ -218,7 +245,6 @@ nav ul {
 .hero {
   place-content: center;
   height: 100vh;
-  background-color: #1C2833;
 }
 .hero__wrapper {
   grid-template-columns: repeat(12, 1fr);
@@ -444,4 +470,8 @@ nav ul {
 }
 .about__right-skill .icon7 i {
   color: #1C2833;
+}
+
+.project {
+  height: 100vh;
 }
