--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1,4 +1,39 @@
-/* EXTRA SMALL DEVICES (PORTRAIT PHONE, less than 576px) */
+/* MOBILE (S) DEVICES (PHONE, less than 375px) */
+@media (max-width: 374.98px) {
+  // HERO START
+  .hero {
+    &__wrapper {
+      // grid-template-columns: repeat(12, 1fr);
+      grid-template-columns: repeat(8, 1fr);
+      grid-gap: 28px !important;
+    }
+
+    &__content {
+      grid-area: 2/1/2/8;
+      width: 100%;
+      text-align: center;
+
+      h1 {
+        margin: 0 auto;
+        width: 10ch;
+      }
+
+      p {
+        margin: 20px 0 40px;
+        padding: 0 5px;
+        width: 100%;
+        line-height: 27px;
+      }
+    }
+
+    &__image {
+      grid-area: 1 / 1 / 1 / 12;
+    }
+  }
+  // HERO END
+}
+
+/* MOBILE (L - M) DEVICES (PORTRAIT PHONE, less than 576px) */
 @media (max-width: 575.98px) {
   // COMMON CSS START
   .btn {
@@ -6,7 +41,7 @@
   }
 
   .container {
-    width: 95%;
+    border: 1px solid cyan;
   }
   // COMMON CSS END
 
@@ -15,8 +50,10 @@
     padding: 10px 0;
     height: 55px;
 
-    &__logo img {
-      height: 35px;
+    &__logo {
+      img {
+        height: 35px;
+      }
     }
 
     &__nav {
@@ -50,14 +87,18 @@
     }
 
     &__wrapper {
+      // grid-template-columns: repeat(12, 1fr);
+      grid-template-columns: repeat(8, 1fr);
       grid-gap: 30px;
     }
 
     &__content {
-      grid-area: 2/1/2/9;
-      width: 140%;
+      grid-area: 2/1/2/12;
+      width: 100%;
+      text-align: center;
 
       h1 {
+        margin: 0 auto;
         width: 10ch;
       }
 
@@ -70,9 +111,9 @@
 
     &__image {
       grid-area: 1 / 1 / 1 / 12;
-      
+
       img {
-        width: 100%;
+        display: block;
       }
     }
 
@@ -108,8 +149,8 @@
       }
     }
   }
+  // ABOUT END
 }
-// ABOUT END
 
 /* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
