--- a/css/main.css
+++ b/css/main.css
@@ -488,7 +488,7 @@ nav ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 80px;
+  gap: 40px;
 }
 .project__filter-buttons {
   gap: 10px;
@@ -509,46 +509,48 @@ nav ul {
   background-color: transparent;
   border: 1px solid #1abc9c !important;
 }
-.project__filter-boxs {
+.project__filter-boxes {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  gap: 20px;
   width: 100%;
   border: 1px solid greenyellow;
 }
-.project__filter-boxs .filter-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: block; /* Important to keep layout intact */
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.project__filter-box {
+  display: block;
   width: 300px;
   height: 300px;
-  -webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
-  transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  transition: opacity 0.5s ease, transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-transition: opacity 0.23s ease-in-out, -webkit-transform 0.23s ease-in-out;
+  transition: opacity 0.23s ease-in-out, -webkit-transform 0.23s ease-in-out;
+  transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out;
+  transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out, -webkit-transform 0.23s ease-in-out;
   opacity: 1;
   -webkit-transform: scale(1);
           transform: scale(1);
   border: 1px solid #fff;
+  background-color: #f0f0f0; /* For visual distinction */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.project__filter-boxs .filter-box.hide {
+.project__filter .project__filter-box.hiding {
   opacity: 0;
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
+  pointer-events: none;
 }
-.project__filter-boxs .filter-box.hide {
+.project__filter .project__filter-box.hide {
   display: none;
 }
